# solana-rpc-client-simple

./: Cargo.toml  README.md
.github/workflows/: build-action.yml  cargo-build.yml
history-api-tester/: Cargo.toml
mango-v4-client/: Cargo.toml
mango-v4-client-wrapper/: Cargo.toml
mango-v4-client-wrapper/src/: lib.rs
mango-v4-client/src/: client.rs  coordinator.rs  main.rs
mango-v4-client/src/services/: asset_price_swap.rs  mod.rs  orderbook_stream_sell.rs  perp_orders.rs  swap_orders.rs  transactions.rs
mango-v4-client/tests/: transaction.rs
rpc-client/: Cargo.toml
rpc-client-wrapper/: Cargo.toml
rpc-client-wrapper/src/: main.rs
sysvar-restart-slot-tester/: Cargo.toml
