[workspace]

members = [
    "mango-v4-client",
    "rpc-client-wrapper",
    "sysvar-restart-slot-tester",
    "history-api-tester",
]

[workspace.dependencies]
anchor-client = "0.27.0"
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
# TODO use this
#fixed = { git = "https://gitlab.com/ckamm/fixed.git", branch = "v1.11.0-mango", version = "1.11.0" }

[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip" }


