[package]
name = "rpc-client-wrapper"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-rpc = "=1.14.18"
solana-sdk = "=1.14.18"
solana-account-decoder = "=1.14.18"
# renamed to solana-rpc-client
#solana-client = "=1.14.19"

clap = { version = "3.1.8", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
futures = "0.3.21"
log = "0.4.0"
#tokio = { version = "1.14.1", features = ["rt-multi-thread", "time", "macros", "sync"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
itertools = "0.10.5"
ordered-float = "3.7.0"
url = "2.3.1"
reqwest = { version = "0.11.17", features = ["json"] }



