[package]
name = "rpc-client-wrapper"
version = "0.1.0"
edition = "2021"


[dependencies]
mango-v4-client = { path = "../mango-v4-client" }
mango-v4 = { tag = "program-v0.16.0", git = "https://github.com/blockworks-foundation/mango-v4.git", features = ["client"] }

anchor-client = "0.27.0"
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
anyhow = "1.0"
async-channel = "1.6"
async-once-cell = { version = "0.4.2", features = ["unpin"] }
async-trait = "0.1.52"
#fixed = { path = "../../3rdparty/fixed", version = "1.11.0", features = ["serde", "borsh"] }
fixed = { git = "https://github.com/blockworks-foundation/mango-v4.git", tag = "program-v0.16.0" }
futures = "0.3.25"
itertools = "0.10.3"
jsonrpc-core = "18.0.0"
#jsonrpc-client-transports = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http", "tls"] }
pyth-sdk-solana = "0.1.0"
serum_dex = { git = "https://github.com/openbook-dex/program.git", tag = "v0.5.10", default-features=false, features = ["no-entrypoint", "program"] }
shellexpand = "2.1.0"
solana-account-decoder = "~1.14.9"
solana-client = "~1.14.9"
solana-rpc = "~1.14.9"
solana-sdk = "~1.14.9"
solana-address-lookup-table-program = "~1.14.9"
solana-program = "~1.14.9"
mango-feeds-connector = "0.1.1"
spl-associated-token-account = "1.0.3"
thiserror = "1.0.31"
log = "0.4"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.9"}
serde = "1.0.141"
serde_json = "1.0.82"
base64 = "0.13.0"
bincode = "1.3.3"
bytemuck = { version = "^1.7.2", features = ["min_const_generics"] }
raven = { path = "../../raven/programs/raven" }
clap = { version = "3.1.8", features = ["derive", "env"] }
dotenv = "0.15.0"
