[package]
name = "sysvar-restart-slot-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
rpc-client-wrapper =  { path = "../rpc-client-wrapper" }
solana-sdk = { version = "=1.14.19",  git = "https://github.com/blockworks-foundation/solana", tag = "v1.14.19" }
# renamed to solana-rpc-client
solana-client = { version = "=1.14.19",  git = "https://github.com/blockworks-foundation/solana", tag = "v1.14.19" }







